@@ -1,3 +1,5 @@
+erp5_mysql_innodb/SQLCatalog_deferFullTextIndex
+erp5_mysql_innodb/SQLCatalog_deferFullTextIndexActivity
 erp5_mysql_innodb/SQLCatalog_makeFullTextQuery
 erp5_mysql_innodb/z0_drop_content_translation
 erp5_mysql_innodb/z0_drop_fulltext
